--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "food-ordering-app",
   "version": "1.0.0",
   "description": "This is a Food ordering app",
-  "main": "App.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -21,6 +20,7 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.29.0"
   }
 }
